feat(#28) : complete groupleader create study UI

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,11 +3,13 @@
 
 
 
-    <string name="group_management">관리</string>
-    <string name="group_management_registertodo_button"> 일정 등록하기 </string>
-    <string name="group_management_modify_button"> 그룹 수정하기 </string>
-    <string name="group_management_currentapply_button"> 신청 현황</string>
-    <string name="group_management_delete_button">그룹 삭제하기</string>
-    <string name="group_management_admin">운영진 관리</string>
+    <string name="groupleader_management">관리</string>
+    <string name="groupleader_management_registertodo_button"> 일정 등록하기 </string>
+    <string name="groupleader_management_modify_button"> 그룹 수정하기 </string>
+    <string name="groupleader_management_currentapply_button"> 신청 현황</string>
+    <string name="groupleader_management_delete_button">그룹 삭제하기</string>
+    <string name="groupleader_management_admin">운영진 관리</string>
+    <string name="groupleader_createstudy"> 공고 작성 </string>
+    <string name="groupleader_createstudy_write"> 작성 </string>
 
 </resources>
