--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,5 @@
     <string name="group_management">관리</string>
     <string name="group_magement_registertodo_button">일정 등록하기</string>
     <string name="group_magement_modify_button">그룹 수정하기</string>
-
+    <string name="group_scedule_registration_save">저장</string>
 </resources>
