--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,11 +4,23 @@
 
 
     <string name="group_management">관리</string>
-<<<<<<< HEAD
-    <string name="group_magement_registertodo_button">일정 등록하기</string>
-    <string name="group_magement_modify_button">그룹 수정하기</string>
     <string name="group_scedule_registration_save">저장</string>
 =======
+    <string name="group_signup_title">신청 현황</string>
+    <string name="management_modified_title">운영진 관리</string>
+    <string name="activity_user_title">프로필</string>
+    <string name="activity_user_modified_btn">수정</string>
+    <string name="activity_user_phone">전화 번호</string>
+    <string name="activity_user_name">이름</string>
+    <string name="activity_user_age">나이</string>
+    <string name="activity_user_interest">관심 분야</string>
+    <string name="activity_user_department">분야</string>
+    <string name="activity_user_image">프로필 이미지</string>
+    <string name="activity_main_view_btn">프로필 이미지</string>
+    <string name="activity_user_recommend">스터디 추천</string>
+    <string name="activity_user_start_btn">시작하기!</string>
+    <string name="activity_user_join_study">속한 스터디 그룹</string>
+    <string name="activity_user_interest_department">관심 있는 분야</string>
     <string name="group_management_registertodo_button"> 일정 등록하기 </string>
     <string name="group_management_modify_button"> 그룹 수정하기 </string>
     <string name="group_management_currentapply_button"> 신청 현황</string>
