feat(#28) : 신청현황 UI

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,8 +19,9 @@
     <string name="group_management_currentapply_button"> 신청 현황</string>
     <string name="group_management_delete_button">그룹 삭제하기</string>
     <string name="group_management_admin">운영진 관리</string>
-    <string name="groupleader_createstudy"> 공고 작성 </string>
-    <string name="groupleader_createstudy_write"> 작성 </string>
+    <string name="group_leader_create_study"> 공고 작성 </string>
+    <string name="group_leader_create_study_write"> 작성 </string>
+    <string name="group_leader_present_application">신청 현황</string>
     <string name="push_permission_ok">확인</string>
     <string name="push_permission_title">푸쉬 권한</string>
     <string name="push_permission_function">알림 기능</string>
