feat(#28) : complete activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,9 +16,10 @@
     <string name="study_search_item_member">인원</string>
     <string name="group_management_registertodo_button"> 일정 등록하기 </string>
     <string name="group_management_modify_button"> 그룹 수정하기 </string>
+    <string name="group_management_apply_button">모집하기</string>
     <string name="group_management_currentapply_button"> 신청 현황</string>
     <string name="group_management_delete_button">그룹 삭제하기</string>
-    <string name="group_management_admin">운영진 관리</string>
+    <string name="group_management_admin">그룹원 관리</string>
     <string name="group_leader_create_study"> 공고 작성 </string>
     <string name="group_leader_create_study_write"> 작성 </string>
     <string name="group_leader_present_application">신청 현황</string>
