refact(#37) : UI 수정 및 개선

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,12 +29,17 @@
     <string name="push_permission_studynotification">스터디 알림 권한</string>
     <string name="push_permission_lacationnotification">자신의 위치 알림 권한</string>
     <string name="memo_detail_title">메모 세부사항</string>
-    <string name="group_member_detailscreen_leave">탈퇴하다</string>
+    <string name="group_member_detailscreen_leave">탈퇴</string>
     <string name="group_member_detailscreen_title">상세화면</string>
     <string name="group_member_detailscreen_locationcheck">스터디원 위치확인</string>
 
     <string name="app_menu_modify">수정</string>
     <string name="app_menu_management">관리</string>
     <string name="app_menu_save">저장</string>
+
+    <string name="bottom_navigation_create">생성</string>
+    <string name="bottom_navigation_schedule">일정</string>
+    <string name="bottom_navigation_serach">검색</string>
+    <string name="bottom_navigation_mypage">마이페이지</string>
 
 </resources>
